[gd_scene load_steps=3 format=3 uid="uid://qcvwvqdjafd0"]

[ext_resource type="PackedScene" uid="uid://bj5vmds47ghui" path="res://items/equippables/equippable_item_template.tscn" id="1_65543"]
[ext_resource type="Script" path="res://items/equippables/equippable_constructable.gd" id="2_thxnl"]

[node name="EquippableConstructable" instance=ExtResource("1_65543")]
script = ExtResource("2_thxnl")

[node name="ItemPlaceRay" type="RayCast3D" parent="." index="2"]
target_position = Vector3(0, 0, -5)
collision_mask = 129

[node name="ConstructableArea" type="Area3D" parent="." index="3"]
top_level = true
collision_layer = 0
collision_mask = 254

[node name="CollisionShape3D" type="CollisionShape3D" parent="ConstructableArea" index="0"]

[node name="ConstructablePreviewMesh" type="MeshInstance3D" parent="ConstructableArea" index="1"]

[connection signal="body_entered" from="ConstructableArea" to="." method="_on_constructable_area_body_entered"]
[connection signal="body_exited" from="ConstructableArea" to="." method="_on_constructable_area_body_exited"]
